examples/test/testpolicy19194.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19194
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key21: value33
      key45: value42
      key35: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value24
          key17: value47
          key47: value18
